--- a/css/home.css
+++ b/css/home.css
@@ -1,120 +1,98 @@
 
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-    font-size: 16px;
+html {
+  font-size: 16px;
 }
 
 body {
-    line-height:1;
-    margin: 0px;
+  margin: 0 auto;
+  text-align: center;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  font-family: 'Raleway', sans-serif;
+  color: #fff;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
-}
+/* HELPER CLASSES*/
 
-nav ul {
-    list-style:none;
-}
-
-blockquote, q {
-    quotes:none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
-}
-
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-
-/* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-
-/* change colours to suit your needs */
-mark {
-    background-color:#ff9;
-    color:#000;
-    font-style:italic;
-    font-weight:bold;
-}
-
-del {
-    text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
-}
-
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-
-/* change border colour to suit your needs */
-hr {
-    display:block;
-    height:1px;
-    border:0;
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-
-input, select {
-    vertical-align:middle;
-}
-
-/* Normal CSS */
-
-#home {
-  background-image: url('../images/home-background.jpg');
-  background-size: cover;
-  background-position: center center;
-  position: relative;
-  top: 0;
-  bottom: 0;
-  height: 100vh;
-  z-index: -10;
-}
-
-#home-overlay {
+.centered {
   position: absolute;
-  background-color: rgba(0,0,0,0.5);
-  top: 0;
-  bottom: 0;
-  height: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 2;
+  max-width: 100%;
+}
+
+.shader {
   width: 100%;
-  z-index: -5;
+  height: 100vh;
+
+  position: absolute;
+  background: -webkit-linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.3));
+  z-index: 1;
+}
+
+/* NAVBAR */
+
+header {
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  background: transparent;
+  width: 100%;
+}
+
+nav {
+  float: right;
+  height: 50px;
+  line-height: 50px;
+  width: 700px;
+}
+
+nav ul li {
+  display: inline-block;
+  margin: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 6%;
+}
+
+nav ul li:last-child {
+  margin-right: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #f2f2f2;
+}
+
+nav ul li a:hover {
+  color: #fff;
+}
+
+/* HOMEPAGE */
+
+main {
+  width: 100%;
+  height: 85vh;
+
+  background: url('../images/home-background.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+footer {
+  width: 100%;
+  position: fixed;
+  background: #629238;
+  height: 15vh;
+}
+
+#footer-txt {
+  padding-top: 3%;
+
 }
