--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,20 @@
 
-body {
-  background: #e6fffa;
+nav {
+  width: 100%;
+  background-color: #629238;
+  height: 15vh;
+}
+
+nav ul li {
+  display: inline;
+  font-family: 'Raleway', sans-serif;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #f2f2f2;
+}
+
+#about-banner {
+  opacity: 0.8;
 }
