--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,6 @@
 
+/* NAVBAR */
+
 nav {
   width: 100%;
   background-color: #629238;
@@ -15,6 +17,16 @@ nav ul li a {
   color: #f2f2f2;
 }
 
+/* BANNER */
+
 #about-banner {
   opacity: 0.8;
+}
+
+/* MAIN CONTENT */
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+  background-color: #cccccc;
 }
