--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,6 @@ html {
   font-size: 0.9rem;
 }
 
-
 /* NAVBAR */
 
 nav {
@@ -41,7 +40,8 @@ nav ul li a {
   color: #629238;
   font-size: 2rem;
   /*font-family: 'Raleway', sans-serif;*/
-  padding-bottom: 1%;
+  padding-bottom: 3%;
+  padding-top: 3%;
 }
 
 #family-operated {
@@ -49,5 +49,17 @@ nav ul li a {
   text-align:justify;
   line-height: 30px;
   font-weight: 400;
-  font-size: 0.9rem;
+}
+
+#thank-customers {
+  text-align: justify;
+  font-weight: 400;
+  line-height: 30px;
+  float: left;
+  width: 480px;
+}
+
+#family-pic {
+  float: right;
+  padding-top: 3%;
 }
