--- a/css/about.css
+++ b/css/about.css
@@ -14,18 +14,20 @@ nav {
 
 ul {
   float: right;
-  margin-top: 2%;
-  width: 500px;
+  margin-top: 3%;
+  margin-right: 9%;
+  width: 550px;
 }
 
 nav ul li {
   display: inline;
-  padding-left: 2%;
+  padding: 5%;
 }
 
 nav ul li a {
   text-decoration: none;
   color: #f2f2f2;
+  font-size: 1.5rem;
 }
 
 /* BANNER */
@@ -56,7 +58,7 @@ nav ul li a {
   color: #629238;
   font-size: 2rem;
   /*font-family: 'Raleway', sans-serif;*/
-  padding-bottom: 3%;
+  padding-bottom: 1%;
   padding-top: 3%;
 }
 
@@ -65,6 +67,11 @@ nav ul li a {
   text-align:justify;
   line-height: 30px;
   font-weight: 400;
+}
+
+#offer-list {
+  float:none;
+  width: 100%;
 }
 
 #thank-customers {
