--- a/css/about.css
+++ b/css/about.css
@@ -10,6 +10,7 @@ nav {
   width: 100%;
   background-color: #629238;
   height: 15vh;
+  position: relative;
 }
 
 ul {
@@ -28,6 +29,19 @@ nav ul li a {
   text-decoration: none;
   color: #f2f2f2;
   font-size: 1.5rem;
+}
+
+#leaf-logo {
+  margin-left: 14%;
+  margin-top: 1%;
+}
+
+span {
+  font-size: 2rem;
+  color: #f2f2f2;
+  position: absolute;
+  margin-top: 2.7%;
+  margin-left: 0.6%;
 }
 
 /* BANNER */
