--- a/css/home.css
+++ b/css/home.css
@@ -52,24 +52,23 @@ nav {
 
 span {
   float: left;
-  margin-left: %;
-  margin-top: 2.7%;
   font-size: 1.5rem;
-  font-family: sans-serif;
+  font-family: 'Noto Serif', serif;
+  margin-top: 3%;
+  margin-left: -0.8%;
 }
 
-#leaf-logo {
+#leaf-image {
   float: left;
-  margin-left: 5%;
-  margin-top: 1.5%;
-
+  margin-left: 4.4%;
+  margin-top: 1.7%;
 }
 
 ul {
   float: right;
   width: 800px;
-  margin-top: 3%;
-  margin-right: 2%;
+  margin-top: 3.5%;
+  margin-right: 4%;
 }
 
 nav:after {
@@ -87,7 +86,8 @@ nav ul li a {
   color: #f2f2f2;
   font-size: 1.5rem;
   padding-left: 90px;
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
 }
 
 a:hover {
@@ -112,15 +112,18 @@ main {
 }
 
 #heading {
-  font-size: 4rem;
+  font-size: 3.8rem;
   color: #fff;
-  font-family: sans-serif;
+  font-family: 'Noto Serif', serif;
+  margin-bottom: 2%;
+  margin-top: 2.6%;
 }
 
 .intro-txt {
   color: #fff;
   font-size: 1.5rem;
   font-family: sans-serif;
+  line-height: 30px;
 }
 
 
@@ -148,9 +151,10 @@ footer {
 #phone-no {
   text-align: right;
   margin-bottom: 1%;
-  margin-right: 4%;
+  margin-right: 4.3%;
   font-family: sans-serif;
   font-size: 1rem;
+  font-weight: 700;
 }
 
 #email-enquiry {
@@ -158,6 +162,7 @@ footer {
   font-family: sans-serif;
   font-size: 1rem;
   margin-right: 1%;
+  font-weight: 700;
 }
 
 #certificate-logo {
