--- a/css/gallery.css
+++ b/css/gallery.css
@@ -29,9 +29,9 @@ nav ul li a {
   text-decoration: none;
   color: #f2f2f2;
   font-size: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
 }
-
-
 
 #leaf-logo {
   margin-left: 14%;
@@ -44,6 +44,7 @@ span {
   position: absolute;
   margin-top: 2.7%;
   margin-left: 0.6%;
+  font-family: 'Noto Serif', serif;
 }
 
 /* BANNER */
@@ -68,4 +69,37 @@ span {
   width: 1000px;
   margin: 0 auto;
   padding: 2%;
+}
+
+/* FOOTER */
+
+.footer-info {
+  width: 250px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 1.3rem;
+  margin-bottom: 1%;
+  margin-top: 3%;
+}
+
+#footer-company {
+  text-transform: uppercase;
+  font-family: 'Noto Serif', serif;
+  color: #629238;
+}
+
+#design-info {
+  font-size: 1rem;
+  font-family: sans-serif;
+}
+
+.contact-details {
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  line-height: 30px;
+}
+
+#email-info {
+  margin-left: -10%;
 }
