--- a/css/contact.css
+++ b/css/contact.css
@@ -29,6 +29,8 @@ nav ul li a {
   text-decoration: none;
   color: #f2f2f2;
   font-size: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
 }
 
 a:hover {
@@ -46,6 +48,7 @@ span {
   position: absolute;
   margin-top: 2.7%;
   margin-left: 0.6%;
+  font-family: 'Noto Serif', serif;
 }
 
 /* BANNER */
@@ -115,7 +118,7 @@ input {
   width: 450px;
 }
 
-.user-contact-form {
+.user-contact-form:after {
   display: block;
   clear: both;
   content: "";
@@ -130,4 +133,37 @@ button {
   background: #629238;
   color: #fff;
   text-transform: uppercase;
+}
+
+/* FOOTER */
+
+.footer-info {
+  width: 250px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 1.3rem;
+  margin-bottom: 1%;
+  margin-top: 5%;
+}
+
+#footer-company {
+  text-transform: uppercase;
+  font-family: 'Noto Serif', serif;
+  color: #629238;
+}
+
+#design-info {
+  font-size: 1rem;
+  font-family: sans-serif;
+}
+
+.contact-details {
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  line-height: 30px;
+}
+
+#email-info {
+  margin-left: -10%;
 }
