--- a/css/about.css
+++ b/css/about.css
@@ -53,7 +53,7 @@ span {
   color: #f2f2f2;
   position: absolute;
   margin-top: 2.7%;
-  margin-left: 0.6%;
+  margin-left: -1%;
   font-family: 'Noto Serif', serif;
 }
 
@@ -79,6 +79,10 @@ span {
   width: 1000px;
   margin: 0 auto;
   padding: 2%;
+}
+
+hr {
+  border-top: 1px solid #ccc;
 }
 
 .sub-headings {
