--- a/css/contact.css
+++ b/css/contact.css
@@ -47,7 +47,7 @@ span {
   color: #f2f2f2;
   position: absolute;
   margin-top: 2.7%;
-  margin-left: 0.6%;
+  margin-left: -1%;
   font-family: 'Noto Serif', serif;
 }
 
@@ -64,7 +64,7 @@ span {
   text-transform:uppercase;
   font-size: 5rem;
   margin-left: 15%;
-  margin-top: -11%;
+  margin-top: -12%;
 }
 
 /* MAIN CONTENT */
@@ -73,6 +73,12 @@ span {
   width: 1000px;
   margin: 0 auto;
   padding: 2%;
+}
+
+hr {
+    border-top: 1px solid #ccc;
+    margin-top: 4%;
+    width: 1057px;
 }
 
 .contact-info {
@@ -85,14 +91,13 @@ span {
   font-size: 2rem;
   color: #629238;
   text-align: center;
-  margin-top: 4%;
+  margin-top: 6%;
   margin-bottom: 6%;
 }
 
 .sub-headings {
   color: #629238;
   font-size: 2rem;
-  /*font-family: 'Raleway', sans-serif;*/
   padding-bottom: 1%;
   padding-top: 3%;
 }
@@ -134,6 +139,15 @@ button {
   color: #fff;
   text-transform: uppercase;
 }
+
+::-webkit-input-placeholder {
+  color: #ccc;
+  padding-left: 2%;
+  font-family: sans-serif;
+  font-size: 1.2rem;
+  letter-spacing: 5px;
+}
+
 
 /* FOOTER */
 
