--- a/css/slider.css
+++ b/css/slider.css
@@ -178,7 +178,7 @@
   display: inline-block;
   width: 32px;
   height: 32px;
-  background-image: url(../images/sprites.png);
+  background-image: url('../images/sprites.png');
   background-repeat: no-repeat;
   cursor: pointer;
   z-index: 22;
