--- a/css/contact.css
+++ b/css/contact.css
@@ -81,23 +81,26 @@ hr {
     width: 987px;
 }
 
-.contact-info {
-  margin: 0 auto;
-  width: 650px;
+#contact-details {
   text-align: center;
-  position: relative;
+  font-size: 1.5rem;
+  line-height: 36px;
+  margin-right: 15%;
+}
+
+#contact-container:after {
+  content: "";
+  clear: both;
+  display: block;
 }
 
 #fountain-image {
-  position: absolute;
-  margin-top: -33%;
-  margin-left: -76%;
+  float: left;
 }
 
 #fountain-image2 {
-  position: absolute;
-  margin-top: -33%;
-  margin-left: 50%;
+  float: right;
+  margin-top: -21%;
 }
 
 #additional-heading {
@@ -113,12 +116,6 @@ hr {
   font-size: 2rem;
   padding-bottom: 1%;
   padding-top: 3%;
-}
-
-.contact-details {
-  line-height: 36px;
-  font-weight: 400;
-  font-size: 2rem;
 }
 
 .input-personal {
@@ -142,6 +139,28 @@ input {
   content: "";
 }
 
+input[type=text] {
+  font-size: 1.8rem;
+  padding-left: 2%;
+}
+
+input[type=number] {
+  font-size: 1.8rem;
+  padding-left: 2%;
+}
+
+input:focus {
+    outline: none !important;
+    border: 1px solid #629238;
+    box-shadow: 0 0 10px #719ECE;
+}
+
+textarea:focus {
+    outline: none !important;
+    border: 1px solid #629238;
+    box-shadow: 0 0 10px #719ECE;
+}
+
 button {
   margin-top: 2%;
   width: 150px;
@@ -153,12 +172,20 @@ button {
   text-transform: uppercase;
 }
 
+button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 ::-webkit-input-placeholder {
   color: #ccc;
   padding-left: 2%;
   font-family: sans-serif;
-  font-size: 1.2rem;
-  letter-spacing: 5px;
+  font-size: 1.8rem;
+  letter-spacing: 3px;
+}
+
+textarea {
+  font-size: 1rem;
 }
 
 
