--- a/css/home.css
+++ b/css/home.css
@@ -167,8 +167,8 @@ footer {
   font-weight: 700;
 }
 
-#certificate-logo {
+#Bali-logo {
   float: left;
-  margin-left: 5%;
-  margin-top: 0.8%;
+  margin-left: 6%;
+  margin-top: 1%;
 }
