--- a/css/home.css
+++ b/css/home.css
@@ -140,12 +140,41 @@ section {
 
 }
 
+/* FOOTER */
 
+.footer-info {
+  width: 250px;
+  margin: 0 auto;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 1.3rem;
+  margin-bottom: 1%;
+  margin-top: 3%;
+}
 
+#footer-company {
+  text-transform: uppercase;
+  font-family: 'Noto Serif', serif;
+  color: #629238;
+}
 
+#design-info {
+  font-size: 1rem;
+  font-family: sans-serif;
+  color: black;
+}
 
+.contact-details {
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  line-height: 30px;
+  color: black;
+}
 
-
+#email-info {
+  margin-left: -10%;
+  color: black;
+}
 
 
 /* MEDIA QUERIES */
