--- a/css/home.css
+++ b/css/home.css
@@ -168,7 +168,7 @@ section:after {
 #list1 {
   text-align: center;
   line-height: 40px;
-  margin-top: 6%;
+  margin-top: 11%;
   font-size: 2rem;
 }
 
@@ -182,15 +182,20 @@ section:after {
 #flower {
   margin-top: 6%;
   margin-right: 10%;
+  max-width: 100%;
+  height: auto;
 }
 
 #rockerie {
   margin-top: 14%;
-  margin-right: 10%;
+  max-width: 100%;
+  height: auto;
 }
 
 #water-feature {
-
+  margin-top: 10%;
+  max-width: 100%;
+  height: auto;
 }
 
 #contact1 {
@@ -199,7 +204,7 @@ section:after {
   font-family: sans-serif;
   text-transform: uppercase;
   margin-right: 15%;
-  margin-top: 6%;
+  margin-top: 3%;
   border: 2px solid #629238;
   font-size: 1.5rem;
   font-weight: 700;
@@ -215,8 +220,14 @@ section:after {
 }
 
 blockquote {
-  font-size: 2rem;
-  margin-top: 35%;
+  font-size: 1.7rem;
+  margin-top: 42%;
+  margin-left: 7%;
+}
+
+#covered-areas {
+  font-size: 1.5rem;
+  font-family: sans-serif;
 }
 
 /* FOOTER */
