--- a/css/home.css
+++ b/css/home.css
@@ -154,14 +154,14 @@ section:after {
 #services {
   text-align: left;
   font-size: 5rem;
-  margin-top: 12%;
+  margin-top: 6%;
   margin-left: 10%;
 }
 
 #landscapes {
   text-align: center;
   font-size: 2.7rem;
-  margin-top: 37%;
+  margin-top: 8%;
   margin-left: 8%;
 }
 
@@ -179,9 +179,8 @@ section:after {
   font-size: 2rem;
 }
 
-#flower {
+#decking {
   margin-top: 6%;
-  margin-right: 10%;
   max-width: 100%;
   height: auto;
 }
@@ -192,7 +191,7 @@ section:after {
   height: auto;
 }
 
-#water-feature {
+#worker {
   margin-top: 10%;
   max-width: 100%;
   height: auto;
@@ -221,7 +220,7 @@ section:after {
 
 blockquote {
   font-size: 1.7rem;
-  margin-top: 42%;
+  margin-top: 74%;
   margin-left: 7%;
 }
 
