--- a/css/gallery.css
+++ b/css/gallery.css
@@ -86,6 +86,9 @@ header {
 
 #example {
   margin-bottom: 2%;
+  text-align: center;
+  font-style: italic;
+  font-family: 'Noto Serif', serif;
 }
 
 /* FOOTER */
