--- a/css/home.css
+++ b/css/home.css
@@ -129,6 +129,7 @@ main {
 
 section {
   width: 100%;
+  height: auto;
 }
 
 .column1 {
@@ -154,47 +155,51 @@ section:after {
 #services {
   text-align: left;
   font-size: 5rem;
-  margin-top: 6%;
-  margin-left: 16%;
+  margin-top: 12%;
+  margin-left: 11%;
+  margin-bottom: 7%;
 }
 
 #landscapes {
   text-align: center;
-  font-size: 2.7rem;
-  margin-top: 8%;
-  margin-left: 1%;
+  font-size: 4rem;
+  margin-top: 15%;
+  margin-left: 12%;
 }
 
 #list1 {
   text-align: center;
   line-height: 43px;
-  margin-top: 6%;
+  margin-top: 10%;
   font-size: 2rem;
 }
 
 #list2 {
   text-align: center;
   line-height: 40px;
-  margin-right: 7%;
+  margin-right: 16%;
   font-size: 1.5rem;
 }
 
 #decking {
-  margin-top: 6%;
+  margin-top: 10%;
   max-width: 100%;
   height: auto;
+  margin-left: 10%;
 }
 
 #rockerie {
   margin-top: 14%;
   max-width: 100%;
   height: auto;
+  margin-right: 10%;
 }
 
 #worker {
-  margin-top: 21%;
+  margin-top: 18%;
   max-width: 100%;
   height: auto;
+  margin-right: 10%;
 }
 
 #contact1 {
@@ -202,7 +207,7 @@ section:after {
   height: 85px;
   font-family: sans-serif;
   text-transform: uppercase;
-  margin-top: 3%;
+  margin-top: 13%;
   border: 2px solid #629238;
   font-size: 1.5rem;
   font-weight: 700;
@@ -228,6 +233,12 @@ blockquote {
 
 blockquote:first-of-type {
   display: block;
+}
+
+#quote-end {
+  position: absolute;
+  top: 256%;
+  left: 5%;
 }
 
 #covered-areas {
