--- a/css/contact.css
+++ b/css/contact.css
@@ -122,6 +122,7 @@ hr {
   font-size: 2rem;
   padding-bottom: 1%;
   padding-top: 3%;
+  margin-bottom: 2%;
 }
 
 .input-personal {
@@ -148,6 +149,7 @@ input {
 input[type=text] {
   font-size: 1.8rem;
   padding-left: 2%;
+  margin-bottom: 3%;
 }
 
 input[type=number] {
