--- a/css/home.css
+++ b/css/home.css
@@ -179,6 +179,7 @@ section:after {
   line-height: 40px;
   margin-right: 16%;
   font-size: 1.5rem;
+  margin-bottom: 10%;
 }
 
 #decking {
@@ -204,17 +205,19 @@ section:after {
 }
 
 #contact1 {
-  width: 270px;
-  height: 85px;
-  font-family: sans-serif;
-  text-transform: uppercase;
-  margin-top: 13%;
-  margin-right: 10%;
-  border: 2px solid #629238;
+  text-decoration: none;
   font-size: 1.5rem;
   font-weight: 700;
+  text-transform: uppercase;
   color: #629238;
-  background-color: #ffffff;
+  font-family: sans-serif;
+  border: 2px solid #629238;
+  padding: 25px;
+  margin-right: 9%;
+}
+
+#contact1:hover {
+  opacity: 0.5;
 }
 
 #contact2 {
@@ -226,7 +229,7 @@ section:after {
 
 blockquote {
   font-size: 2rem;
-  margin-top: 32%;
+  margin-top: 15%;
   margin-left: 21%;
   display: none;
   font-style: italic;
@@ -239,7 +242,7 @@ blockquote:first-of-type {
 
 #quote-end {
   position: absolute;
-  top: 275%;
+  top: 260%;
   left: 5%;
 }
 
