--- a/css/home.css
+++ b/css/home.css
@@ -123,8 +123,7 @@ main {
   font-size: 1.5rem;
   font-family: sans-serif;
   font-weight: 700;
-  position: absolute;
-  margin-left: 63%;
+  margin-left: 56%;
   margin-top: -1.7%;
   text-shadow: 1px 1px 1px #000;
 
@@ -350,5 +349,72 @@ blockquote:first-of-type {
     float: none;
     display: block;
     text-align: left;
+  }
+}
+
+/* RESPONSIVE SCREEN SIZES */
+
+@media screen and (max-width: 980px) {
+  #phone-no {
+    margin-right: 0%;
+    padding-bottom: 5px;
+  }
+  #email-head {
+    margin-left: 0%;
+    margin-top: 0%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #heading {
+    font-size: 3rem;
+  }
+  .intro-txt {
+    font-size: 1.2rem;
+    line-height: 26px;
+  }
+  .centered {
+    top: 56%;
+  }
+  #phone-no {
+    font-size: 1.3rem;
+  }
+  #email-head {
+    font-size: 1.3rem;
+  }
+  #leaf-image {
+    margin-top: -12%;
+  }
+}
+
+@media screen and (max-width: 687px) {
+  .topnav.responsive a {
+    text-align: center;
+    padding: 10px;
+  }
+  #leaf-image {
+    margin-top: 0%;
+    margin-right: 14%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #heading {
+    font-size: 2.5rem;
+    margin-bottom: 12px;
+  }
+  .intro-txt {
+    font-size: 1rem;
+    line-height: 23px;
+  }
+  .centered {
+    top: 58%;
+  }
+  #phone-no {
+    font-size: 1rem;
+    padding-top: 30px;
+  }
+  #email-head {
+    font-size: 1rem;
   }
 }
