gallery page responsive done

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -151,3 +151,52 @@ header {
     text-align: left;
   }
 }
+
+/* RESPONSIVE PAGE */
+
+@media screen and (max-width: 1100px) {
+  .page-headings {
+    margin-top: -13%;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .page-headings {
+    margin-top: -16%;
+  }
+}
+
+@media screen and (max-width: 687px) {
+  .page-headings {
+    margin-top: -19%;
+  }
+  #leaf-image {
+    margin-top: 0%;
+    margin-right: 14%;
+  }
+  .topnav.responsive a {
+    text-align: center;
+    padding: 15px;
+  }
+  .sub-headings {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .page-headings {
+    margin-top: -23%;
+  }
+  .sub-headings {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .page-headings {
+    margin-top: -26%;
+  }
+  .sub-headings {
+    font-size: 1.2rem;
+  }
+}
