--- a/css/home.css
+++ b/css/home.css
@@ -354,6 +354,28 @@ blockquote:first-of-type {
 
 /* RESPONSIVE SCREEN SIZES */
 
+/* IPAD LANDSCAPE */
+@media screen and (max-width: 1024px) {
+  #heading {
+    font-size: 2.7rem;
+  }
+  .intro-txt {
+    font-size: 1.2rem;
+  }
+  .centered {
+    top: 56%;
+    left: 49%;
+  }
+  #email-head {
+    font-size: 1.2rem;
+    margin-top: -1.6%;
+  }
+  #phone-no {
+    font-size: 1.2rem;
+    padding-top: 4%;
+  }
+}
+
 @media screen and (max-width: 980px) {
   #phone-no {
     margin-right: 0%;
