--- a/css/home.css
+++ b/css/home.css
@@ -390,11 +390,6 @@ blockquote:first-of-type {
   }
 }
 
-
-
-
-
-
 @media screen and (max-width: 980px) {
   #phone-no {
     margin-right: 0%;
@@ -503,5 +498,56 @@ blockquote:first-of-type {
   }
   .topnav.responsive a {
     padding: 5px;
+  }
+}
+
+/* Expansion Page */
+
+/* IPAD LANDSCAPE */
+@media screen and (max-width: 1024px) {
+  #services {
+    text-align: center;
+    font-size: 4rem;
+    margin-left: 5%;
+  }
+  #list2 {
+    margin-right: 1%;
+  }
+  #contact1 {
+    margin-right: -7%;
+  }
+  #rockerie {
+    max-width: 90%;
+    margin-right: -1%;
+  }
+  #worker {
+    max-width: 90%;
+    margin-right: -1%;
+    margin-top: 25%;
+  }
+  #landscapes {
+    margin-top: 5%;
+  }
+  #list1 {
+    line-height: 40px;
+    margin-top: 4%;
+    font-size: 1.7rem;
+  }
+  blockquote {
+    font-size: 1.7rem;
+    margin-top: 17%;
+  }
+  .footer-info {
+    margin-top: 8%;
+  }
+  #covered-opacity {
+    width: 444px;
+    height: 80px;
+    margin-top: -8%;
+  }
+  #covered-txt {
+    font-size: 1.8rem;
+    margin-left: 4%;
+    margin-top: -5.5%;
   }
 }
