--- a/css/home.css
+++ b/css/home.css
@@ -225,16 +225,53 @@ section:after {
   margin-right: 10%;
 }
 
-#contact1 {
-  text-decoration: none;
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #629238;
-  font-family: sans-serif;
-  border: 2px solid #629238;
-  padding: 25px;
-  margin-right: 9%;
+/* General button style (reset) */
+.btn {
+	border: 2px solid #629238;
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	background: none;
+	cursor: pointer;
+	padding: 25px 80px;
+	display: inline-block;
+	margin: 15px 30px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
+	outline: none;
+	position: relative;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn:after {
+	content: '';
+	position: absolute;
+	z-index: -1;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+/* Button 1c */
+.btn-1c:after {
+	width: 0%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #000;
+}
+
+.btn-1c:hover,
+.btn-1c:active {
+	color: #629238;
+}
+
+.btn-1c:hover:after,
+.btn-1c:active:after {
+	width: 100%;
 }
 
 #contact1:hover {
@@ -714,6 +751,6 @@ blockquote:first-of-type {
     font-size: 1rem;
   }
   #email-info {
-    margin-left: -2%; 
+    margin-left: -2%;
   }
 }
